--- a/templates/header/themes.mustache
+++ b/templates/header/themes.mustache
@@ -40,6 +40,15 @@
                             </div>
                         {{/contextheader}}
 
+                        {{# is_teacher }}
+                            <div class="tool-tooltip edition" data-toggle="tooltip" data-placement="left" title="{{# str }} edit_course, theme_cbe {{/ str }}">
+                                <a class="tool-link" href="{{ edit_course }}">
+                                    <i class="fa fa-wrench" aria-hidden="true"></i>
+                                    <div class="triangle"></div>
+                                </a>
+                            </div>
+                        {{/ is_teacher }}
+
                         {{#settingsmenu}}
                             <div class="context-header-settings-menu">
                                 {{{settingsmenu}}}
@@ -54,12 +63,9 @@
                             {{/headeractions}}
                         </div>
                     </div>
-                    <div class="d-flex flex-wrap">
+                    <div class="d-flex flex-wrap mode-edition">
                         <div class="ml-auto d-flex">
                             {{{pageheadingbutton}}}
-                            {{# is_teacher }}
-                            <div class="tri triangle-edit"></div>
-                            {{/ is_teacher }}
                         </div>
                         <div id="course-header">
                             {{{courseheader}}}
