--- a/scss/layout/_editionmode.scss
+++ b/scss/layout/_editionmode.scss
@@ -1,4 +1,4 @@
-body[data-theme='cbe'][data-role='user'] {
+body[data-theme='cbe'][data-role='user']#page-course-view-topics {
 
   #page-header.row.course {
     .card-body .tri {
@@ -25,10 +25,10 @@ body[data-theme='cbe'][data-role='user'] {
           visibility: visible;
           content: "\f040";
           font: normal normal normal 14px/1 FontAwesome;
-          background-color: $primary-color;
+          background-color: $grey-medium;
           border: none;
-          height: 45px;
-          width: 60px;
+          height: 55px;
+          width: 70px;
           font-size: 25px;
           position: absolute;
           right: -10px;
@@ -38,23 +38,25 @@ body[data-theme='cbe'][data-role='user'] {
           align-items: center;
           border-radius: 9px 0 0 10px;
           cursor: pointer;
+          box-shadow: rgb(14 30 37 / 12%) 0 2px 4px 0, rgb(14 30 37 / 32%) 0 2px 16px 0;
         }
         &:hover {
           &:before {
             color: white;
-            background-color: #f93c88;
+            background-color: $grey-medium2;
+            box-shadow: rgb(14 30 37 / 12%) 0 2px 4px 0, rgb(14 30 37 / 32%) 0 2px 16px 0;
           }
         }
       }
       input[name="edit"][value="off"] ~ button {
         &:before {
-          background-color: $grey-medium;
+          background-color: $primary-color;
           content: "\f044";
           font-size: 28px;
         }
         &:hover {
           &:before {
-            background-color: #747474;
+            background-color: $primary-color-light;
           }
         }
       }
@@ -65,7 +67,21 @@ body[data-theme='cbe'][data-role='user'] {
       right: 11px;
     }
   }
+}
 
+body[data-theme='cbe'][data-role='user']#page-course-view-topics.editing {
 
+  #page {
+    background-color: #cacaca!important;
+    ul.topics {
+      .section.main {
+        background-color: #fff;
+        margin: 0 0 15px;
+        border: 5px dashed #8a8a8a;
+        padding: 15px 10px;
+      }
+    }
+  }
 
 }
+
