--- a/scss/cbe.scss
+++ b/scss/cbe.scss
@@ -5,6 +5,7 @@
 @import "base/reset";
 @import "base/form";
 @import "base/icons";
+@import "base/navs";
 
 @import "components/modal";
 @import "components/coursecard";
