--- a/templates/sections/course_left_section_themes_navigation_component.mustache
+++ b/templates/sections/course_left_section_themes_navigation_component.mustache
@@ -8,7 +8,7 @@
     </a>
     <ul class="themes">
         {{# themes }}
-        <li class="theme {{# active }}active{{/ active }}">
+        <li class="theme {{# active }}active{{/ active }} {{# is_hidden }}is_hidden{{/ is_hidden }}">
             <a href="{{ href }}">{{# shortentext }} 90, {{ name }} {{/ shortentext }}</a>
         </li>
         {{/ themes }}
