--- a/scss/components/_modulecbe.scss
+++ b/scss/components/_modulecbe.scss
@@ -64,6 +64,19 @@ body[data-theme='cbe'][data-role="user"] {
     align-items: normal;
     margin-bottom: 15px;
     position: relative;
+    .is_hidden_msg {
+      color: #212529;
+      background-color: #5bc0de;
+      font-size: 10px;
+      position: absolute;
+      padding: 1px 4px;
+      right: 4px;
+      top: 6px;
+    }
+    &.is_hidden {
+      opacity: 0.5;
+      border: 2px dashed $grey-border;
+    }
     .item-mod {
       display: flex;
       .mod {
@@ -88,6 +101,9 @@ body[data-theme='cbe'][data-role="user"] {
           background-size: contain;
           &:hover {
             opacity: 90%;
+          }
+          >img {
+            width: 30px;
           }
         }
         img.picture {
@@ -147,39 +163,6 @@ body[data-theme='cbe'][data-role="user"] {
           margin-left: 5px;
         }
       }
-    }
-    &.forum .mod .icon {
-      background-image: url('[[pix:mod_forum|icon]]');
-    }
-    &.assign .mod .icon  {
-      background-image: url('[[pix:mod_assign|icon]]');
-    }
-    &.resource .mod .icon  {
-      background-image: url('[[pix:mod_resource|icon]]');
-    }
-    &.quiz .mod .icon  {
-      background-image: url('[[pix:mod_quiz|icon]]');
-    }
-    &.url .mod .icon  {
-      background-image: url('[[pix:mod_url|icon]]');
-    }
-    &.tresipuntaudio .mod .icon  {
-      background-image: url('[[pix:mod_tresipuntaudio|icon]]');
-    }
-    &.tresipuntvideo .mod .icon  {
-      background-image: url('[[pix:mod_tresipuntvideo|icon]]');
-    }
-    &.tresipuntshare .mod .icon  {
-      background-image: url('[[pix:mod_tresipuntshare|icon]]');
-    }
-    &.feedback .mod .icon  {
-      background-image: url('[[pix:mod_feedback|icon]]');
-    }
-    &.bigbluebuttonbn .mod .icon  {
-      background-image: url('[[pix:mod_bigbluebuttonbn|icon]]');
-    }
-    &.page .mod .icon  {
-      background-image: url('[[pix:mod_page|icon]]');
     }
     .to_comment {
       bottom: -60px;
