fix moderators style

--- a/scss/pages/_vclasses.scss
+++ b/scss/pages/_vclasses.scss
@@ -36,6 +36,9 @@ body[data-theme='cbe'][data-role='user'] {
           color: white;
         }
       }
+      .moderators {
+        display: flex;
+      }
     }
 
   }
