pages system styles

--- a/scss/base/_navs.scss
+++ b/scss/base/_navs.scss
@@ -4,6 +4,7 @@ body[data-theme='cbe'][data-role='user'] {
   #page-content.course {
     .groupdisplay,
     .grade-navigation,
+    .questionbank-navigation,
     div[role="main"] {
       >.nav-tabs {
         border: none;
