--- a/scss/cbe.scss
+++ b/scss/cbe.scss
@@ -27,6 +27,8 @@
 @import "pages/dashboard";
 @import "pages/course";
 @import "pages/course_grades";
+@import "pages/course_report";
+@import "pages/course_question";
 @import "pages/course_users";
 @import "pages/course_groups";
 @import "pages/category";
