--- a/scss/components/_table.scss
+++ b/scss/components/_table.scss
@@ -40,12 +40,12 @@ body[data-theme='cbe'][data-role='user'] {
       }
       .commands {
         position: absolute;
-        top: 18px;
-        right: 11px;
+        top: 2px;
+        right: 1px;
         >a {
           color: #ccc;
           border: 1px solid #ccc;
-          padding: 2px 2px;
+          padding: 1px;
           display: flex;
           justify-content: center;
           align-items: center;
@@ -55,9 +55,9 @@ body[data-theme='cbe'][data-role='user'] {
           }
           >i.icon {
             margin: 0;
-            font-size: 12px;
-            width: 12px;
-            height: 12px;
+            font-size: 8px;
+            width: 9px;
+            height: 9px;
           }
         }
       }
