--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,5 +1,7 @@
 $primary-color: #d5045c;
 $primary-color-light: #ea3e84;
+$primary-color-hover: #b22361;
+$primary-color-hard: #861949;
 $black-ligth: #262626;
 $grey-medium: #929292;
 $grey-border: #D9D9D9;
@@ -16,4 +18,3 @@ $grey-hight: #717171;
 $font: Montserrat, sans-serif;
 $fontbold: Montserrat Bold, sans-serif;
 $fontthin: Montserrat Thin, sans-serif;
-
