--- a/scss/pages/_themes.scss
+++ b/scss/pages/_themes.scss
@@ -44,14 +44,14 @@ body[data-theme='cbe'][data-role='user']#page-course-view-topics{
             .triangle {
               width: 0;
               height: 0;
-              border-top: 10px solid #861949;
+              border-top: 10px solid $primary-color-hard;
               border-right: 10px solid transparent;
               position: absolute;
               bottom: -10px;
               right: 0;
             }
             &:hover, &:focus {
-              background-color: #e82373 !important;
+              background-color: $primary-color-light !important;
               text-decoration: none;
             }
           }
@@ -74,7 +74,7 @@ body[data-theme='cbe'][data-role='user']#page-course-view-topics{
       border-radius: 10px 0 0 10px;
       z-index: 2;
       &:hover {
-        background-color: #e82373!important;
+        background-color: $primary-color-light !important;
       }
     }
   }
