--- a/templates/columns2/columns2.mustache
+++ b/templates/columns2/columns2.mustache
@@ -50,7 +50,7 @@
 }}
 {{> theme_boost/head }}
 
-<body {{{ bodyattributes }}} data-theme="cbe" data-role="user">
+<body {{{ bodyattributes }}} data-theme="cbe" data-role="user" data-primary="{{ colors.primary }}" data-secondary="{{ colors.secondary }}" data-background="{{ colors.background }}">
 {{> core/local/toast/wrapper}}
 
     <div id="page-wrapper" class="d-print-block">
