--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -35,7 +35,7 @@ body[data-theme='cbe'][data-role="user"] {
                 &:hover {
                   background-color: $grey-light;
                   .mod-icon {
-                    background-color: #b22361;
+                    background-color: $primary-color-hover;
                   }
                 }
                 .mod-icon {
