--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,7 +1,9 @@
-$primary-color: #d5045c;
-$primary-color-light: #ea3e84;
-$primary-color-hover: #b22361;
-$primary-color-hard: #861949;
+$primary-color: $primary;
+$primary-color-light: lighten( $primary, 15% );
+$primary-color-hover: darken( $primary, 15% );
+$primary-color-hard: darken( $primary, 15% );
+$backboard-color: $backboard;
+$secondary-color: $secondarycolor;
 $black-ligth: #262626;
 $grey-medium: #929292;
 $grey-border: #D9D9D9;
