--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -34,7 +34,7 @@ body[data-theme='cbe'][data-role='user'] {
 
   #page {
     margin-top: $nav-height;
-    background-color: $grey-light !important;
+    background-color: $backboard-color !important;
   }
 
   .card {
