--- a/templates/navbar/navbar_login.mustache
+++ b/templates/navbar/navbar_login.mustache
@@ -40,8 +40,7 @@
 <nav class="fixed-top navbar_login navbar-light bg-white navbar-expand moodle-has-zindex" aria-label="{{#str}}sitemenubar, admin{{/str}}">
 
     <div id="login-logo">
-        {{# pix }} logo, theme_cbe, Logotipo {{/ pix }}
+        {{{ logo }}}
     </div>
-
 
 </nav>
