--- a/templates/login.mustache
+++ b/templates/login.mustache
@@ -39,7 +39,10 @@
     {{{ output.standard_top_of_body_html }}}
     {{> theme_cbe/navbar/navbar_login }}
 
-    <div id="page" class="container-fluid mt-0">
+    <div id="page" class="container-fluid mt-0" style='background:
+                                                        linear-gradient(rgb(255 255 255 / 40%),
+                                                        rgb(255 255 255 / 40%)),
+                                                        url("{{{ loginbackground }}}"); background-size: cover;'>
         <div id="page-content" class="row">
             <div id="region-main-box" class="col-12">
                 <section id="region-main-login" class="col-12" aria-label="{{#str}}content{{/str}}">
