--- a/templates/navbar/navbar_admin.mustache
+++ b/templates/navbar/navbar_admin.mustache
@@ -49,7 +49,7 @@
             {{/ output.should_display_navbar_logo }}
                 ">
             <div id="login-logo">
-                {{# pix }} logo, theme_cbe, Logotipo {{/ pix }}
+                {{{ logo }}}
             </div>
         </a>
 
