edit styles errors

--- a/scss/cbe.scss
+++ b/scss/cbe.scss
@@ -15,6 +15,7 @@
 @import "components/table";
 @import "components/block_tresipuntmodspend";
 @import "components/block_timeline";
+@import "components/message";
 
 @import "layout/navbar";
 @import "layout/flatnav";
