--- a/scss/pages/_course_grades.scss
+++ b/scss/pages/_course_grades.scss
@@ -1,6 +1,8 @@
-body[data-theme='cbe'][data-role='user'].path-grade {
+body[data-theme='cbe'][data-role='user'].path-grade,
+body[data-theme='cbe'][data-role='user']#page-course-user {
 
-  #page-content.course {
+  #page-content.course,
+  #page-content.user {
     .grade-navigation {
       padding-top: 16px;
     }
