update pending grades

--- a/scss/cbe.scss
+++ b/scss/cbe.scss
@@ -16,6 +16,7 @@
 @import "components/block_tresipuntmodspend";
 @import "components/block_timeline";
 @import "components/message";
+@import "components/modassign";
 
 @import "layout/navbar";
 @import "layout/flatnav";
