--- a/scss/layout/_editionmode.scss
+++ b/scss/layout/_editionmode.scss
@@ -73,12 +73,15 @@ body[data-theme='cbe'][data-role='user']#page-course-view-topics.editing {
 
   #page {
     background-color: #cacaca!important;
-    ul.topics {
-      .section.main {
+    .course-content {
+      >ul.topics .section.main, .single-section {
         background-color: #fff;
         margin: 0 0 15px;
         border: 5px dashed #8a8a8a;
         padding: 15px 10px;
+      }
+      >ul.topics #section-0:only-child {
+        display: none !important;
       }
     }
   }
