--- a/scss/pages/_modedit.scss
+++ b/scss/pages/_modedit.scss
@@ -110,6 +110,22 @@ body[data-theme='cbe'][data-role='user']#page-mod-assign-grantextension {
 
 }
 
+body[data-theme='cbe'][data-role='user'].pagelayout-admin {
+  #page-content.course {
+    #region-main-box {
+      #region-main.in_course[data-region="module"],
+      #region-main.in_course[data-region="modedit"] {
+        div[role="main"] > h2 {
+          > img.icon {
+            left: -53px;
+            top: 0;
+          }
+        }
+      }
+    }
+  }
+}
+
 body[data-theme='cbe'][data-role='user']#page-mod-bigbluebuttonbn-mod {
 
   #page-content.course {
