--- a/scss/pages/_themes.scss
+++ b/scss/pages/_themes.scss
@@ -131,6 +131,10 @@ body[data-theme='cbe'][data-role='user']#page-course-view-topics{
             }
           }
         }
+        .custom-select.jumpmenu {
+          margin-top: 23px;
+          font-size: 12px;
+        }
       }
       .sectionname {
         text-align: left;
