--- a/templates/columns2/columns2_user.mustache
+++ b/templates/columns2/columns2_user.mustache
@@ -50,7 +50,7 @@
 }}
 {{> theme_boost/head }}
 
-<body {{{ bodyattributes }}} data-theme="cbe" data-role="user" data-primary="{{ color.primary }}" data-secondary="{{ color.secondary }}" data-background="{{ color.background }}">
+<body {{{ bodyattributes }}} data-theme="cbe" data-role="user">
 {{> core/local/toast/wrapper}}
 
     <div id="page-wrapper" class="d-print-block">
