--- a/scss/pages/_modedit.scss
+++ b/scss/pages/_modedit.scss
@@ -1,12 +1,15 @@
 body[data-theme='cbe'][data-role='user'].pagelayout-admin,
 body[data-theme='cbe'][data-role='user']#page-course-editsection,
+body[data-theme='cbe'][data-role='user']#page-course-edit,
 body[data-theme='cbe'][data-role='user']#page-mod-assign-grading,
 body[data-theme='cbe'][data-role='user']#page-mod-feedback-edit,
 body[data-theme='cbe'][data-role='user']#page-mod-feedback-import,
 body[data-theme='cbe'][data-role='user']#page-mod-assign-grantextension {
 
-  #page-content.course {
+  #page-content.course,
+  #page-content.user {
     #region-main-box {
+      #region-main.in_course[data-region="category"],
       #region-main.in_course[data-region="module"],
       #region-main.in_course[data-region="modedit"]  {
         div[role="main"]>h2 {
@@ -37,71 +40,68 @@ body[data-theme='cbe'][data-role='user']#page-mod-assign-grantextension {
           }
         }
       }
-
-      section.in_course {
-        form.mform {
-          padding-right: 15px;
-          fieldset {
-            padding-top: 0;
-            padding-bottom: 15px;
-            margin-top: 20px;
-            margin-bottom: 22px;
-            border-bottom: 1px dashed #eaeaea;
-            legend a.fheader {
-              color: $grey-medium;
-              font-family: $fontbold;
-              font-size: 22px;
-              font-weight: 700;
+      form.mform {
+        padding-right: 15px;
+        fieldset {
+          padding-top: 0;
+          padding-bottom: 15px;
+          margin-top: 20px;
+          margin-bottom: 22px;
+          border-bottom: 1px dashed #eaeaea;
+          legend a.fheader {
+            color: $grey-medium;
+            font-family: $fontbold;
+            font-size: 22px;
+            font-weight: 700;
+          }
+        }
+        .form-group.row.fitem {
+          display: flex;
+          flex-direction: column;
+          .col-form-label {
+            font-weight: 600;
+            >div {
+              margin-left: 5px !important;
             }
           }
-          .form-group.row.fitem {
-            display: flex;
-            flex-direction: column;
-            .col-form-label {
-              font-weight: 600;
-              >div {
-                margin-left: 5px !important;
-              }
-            }
-            .form-control {
+          .form-control {
+            width: 100%;
+          }
+          div.col-md-9,
+          div.col-md-3 {
+            flex: inherit;
+            max-width: 100%;
+          }
+          .felement {
+            select {
               width: 100%;
             }
-            div.col-md-9,
-            div.col-md-3 {
-              flex: inherit;
-              max-width: 100%;
-            }
-            .felement {
-              select {
-                width: 100%;
-              }
-            }
-            .filemanager {
-              position: relative;
-              margin-top: 6px;
-              .fp-restrictions {
-                position: absolute;
-                top: -21px;
-                right: 0;
-                font-size: 12px;
-                color: grey;
-              }
-            }
-
-            .fdefaultcustom {
-              display: flex;
-              align-items: center;
-              flex-direction: row-reverse;
-            }
-
           }
-          .fdescription.required {
-            text-align: center;
-            margin-top: 35px;
-            font-size: 14px;
-            color: grey;
-            padding: 10px;
+          .filemanager {
+            position: relative;
+            margin-top: 6px;
+            .fp-restrictions {
+              position: absolute;
+              top: -21px;
+              right: 0;
+              font-size: 12px;
+              color: grey;
+            }
           }
+
+          .fdefaultcustom {
+            display: flex;
+            align-items: center;
+            flex-direction: row-reverse;
+          }
+
+        }
+        .fdescription.required {
+          text-align: center;
+          margin-top: 35px;
+          font-size: 14px;
+          color: grey;
+          padding: 10px;
         }
       }
 
